force-app/main/default/objects/ilms__User_Speciality__c/ilms__User_Speciality__c.object-meta.xml
<CustomObject>
    <label>Speciality User (Deprecated)</label>
    <nameField>
        <displayFormat>US{0000}</displayFormat>
        <label>User Speciality Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialities User (Deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>