force-app/main/default/objects/ilms__User_Speciality__c/fields/ilms__Books__c.field-meta.xml
<CustomField>
    <fullName>ilms__Books__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Books Completed</description>
    <label>Books</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>