force-app/main/default/objects/ilms__User_Speciality__c/fields/ilms__Points__c.field-meta.xml
<CustomField>
    <fullName>ilms__Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Points</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>