force-app/main/default/objects/ilms__User_Speciality__c/fields/ilms__Speciality__c.field-meta.xml
<CustomField>
    <fullName>ilms__Speciality__c</fullName>
    <label>Speciality</label>
    <referenceTo>ilms__Speciality__c</referenceTo>
    <relationshipName>Speciality</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>