force-app/main/default/objects/ilms__User_Speciality__c/fields/ilms__Status__c.field-meta.xml
<CustomField>
    <fullName>ilms__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Progress</fullName>
                <default>true</default>
                <label>Progress</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>