force-app/main/default/objects/ilms__User_Speciality__c/fields/ilms__User__c.field-meta.xml
<CustomField>
    <fullName>ilms__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>